test/tests/stages/7_compound_statements/valid/hidden_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
  }
