test/tests/stages/7_compound_statements/invalid_semantics/out_of_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  }
  return
  identifier(a)
  ;
  }
